--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.2.0.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
